--- a/covid-tracker-app/src/App.css
+++ b/covid-tracker-app/src/App.css
@@ -75,3 +75,16 @@
   height: 100%;
   width: 100%;
 }
+
+.selector {
+  float: left;
+  width: 200px;
+  height: 40px;
+}
+
+.button {
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  display:block;
+}
