--- a/covid-tracker-app/src/App.css
+++ b/covid-tracker-app/src/App.css
@@ -82,6 +82,12 @@
   height: 40px;
 }
 
+.dropdown-selector {
+  float: left;
+  width: 400px;
+  height: 40px;
+}
+
 .button {
   height: 100%;
   width: 100%;
